--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jquery-test",
-  "version": "0.0.0",
+  "name": "movie-watchlist",
+  "version": "1.0.1",
   "description": "Sample movies app using JQuery",
   "main": "index.js",
   "scripts": {
